force-app/main/default/objects/Data_Quality_Config__mdt/Data_Quality_Config__mdt.object-meta.xml
<CustomObject>
    <label>Data Quality Config</label>
    <pluralLabel>Data Quality Configs</pluralLabel>
</CustomObject>