force-app/main/default/objects/Data_Quality_Config__mdt/fields/CheckType__c.field-meta.xml
<CustomField>
    <fullName>CheckType__c</fullName>
    <description>This chektype represents method of class to be run</description>
    <label>CheckType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>runReqFieldChecks</fullName>
                <default>true</default>
                <label>runReqFieldChecks</label>
            </value>
            <value>
                <fullName>runEmailandPhoneChecks</fullName>
            </value>
            <value>
                <fullName>searchForDuplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>