force-app/main/default/objects/Data_Quality_Config__mdt/fields/EmailFieldAPINames__c.field-meta.xml
<CustomField>
    <fullName>EmailFieldAPINames__c</fullName>
    <label>EmailFieldAPINames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>