force-app/main/default/objects/Data_Quality_Config__mdt/fields/PhonefieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>PhonefieldAPIName__c</fullName>
    <label>PhonefieldAPIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>