force-app/main/default/objects/Data_Quality_Config__mdt/fields/Required_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Required_Field_Api_Name__c</fullName>
    <label>Required Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>